# event-link

./: .bandit  .codacy.yml  .deepsource.toml  .env.example  .eslintrc.cjs  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prospector.yaml  .pylintrc  .stylelintrc.cjs  .stylelintrc.json  AGENTS.md  CLAUDE.md  Makefile  README.md  SECURITY.md  TODO.md  codecov.yml  docker-compose.yml  env.tools.example  eslint.config.mjs  event-link-db-structure.txt  main_codacy_issues.json  main_issues_all.json  package-lock.json  sonar-project.properties  start.bat  tslint.json
backend/: .gitignore  .topsecret.example  Dockerfile  README.md  fixture_helpers.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  seed_data.py
backend/alembic/: env.py
backend/app/: __init__.py  api.py  auth.py  config.py  database.py  email_service.py  email_templates.py  logging_utils.py  main.py  models.py  ro_universities.py  ro_universities_catalog.json  schemas.py  task_queue.py  task_queue_delivery.py  task_queue_guardrails.py  task_queue_shared.py  worker.py
backend/integration_tests/: conftest.py  test_postgres_smoke.py
backend/scripts/: enqueue_scheduled_jobs.py  generate_openapi.py  recompute_ml_interactions.py  recompute_ml_loading.py  recompute_ml_prepare_state.py  recompute_ml_shared.py  recompute_ml_state_helpers.py  recompute_recommendations_ml.py
backend/tests/: api_branch_extra_helpers.py  api_coverage_helpers.py  api_test_support.py  conftest.py  recompute_ml_test_helpers.py  task_queue_test_support.py  test_api.py  test_api_misc_flows.py  (+45 more)
(+323 files in other folders)
