[project]
name = "event-link-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.4.0",
    "passlib[bcrypt]",
    "bcrypt==4.0.1",
    "python-jose[cryptography]",
    "python-multipart",
    "pydantic[email]>=2.12.3",
    "alembic>=1.14.0",
    "httpx>=0.28.1",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
